tests/miz/fail/parser/fail_parser_block_statements_recovery_001.miz
then now end;
then hereby end;
per cases by computation(steps: 1);
per cases;
case thesis
  thus thesis;
end;
per cases;
case thesis;
  thus thesis;
suppose thesis;
